--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -136,6 +136,11 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
+        manifestPlaceholders = [
+        JPUSH_APPKEY: "607bd7ca60873fd71bf3e441",	
+        APP_CHANNEL: "developer-default"
+        ]
     }
     splits {
         abi {
@@ -184,6 +189,19 @@ android {
 }
 
 dependencies {
+
+    // 如果你需要支持Android4.0(API level 14)之前的版本
+    implementation 'com.facebook.fresco:animated-base-support:1.3.0'
+    // 如果你需要支持GIF动图
+    implementation 'com.facebook.fresco:animated-gif:2.0.0'
+    // 如果你需要支持WebP格式，包括WebP动图
+    implementation 'com.facebook.fresco:animated-webp:2.1.0'
+    implementation 'com.facebook.fresco:webpsupport:2.0.0'
+    //极光
+    compile project(':jmessage-react-plugin') // 新增的
+    compile project(':jcore-react-native')  // 新增的
+    implementation project(':jpush-react-native')  // 添加 jpush 依赖
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
