--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
   package="com.shejiao">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+   
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -21,5 +22,9 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+          <!-- 极光的配置 -->
+      <meta-data android:name="JPUSH_CHANNEL" android:value="${APP_CHANNEL}" />
+      <meta-data android:name="JPUSH_APPKEY" android:value="${JPUSH_APPKEY}" />
+      <meta-data android:name="com.amap.api.v2.apikey" android:value="607bd7ca60873fd71bf3e441" />
     </application>
 </manifest>
