--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
         "react-native-gesture-handler": "^1.10.3",
         "react-native-image-crop-picker": "^0.36.2",
         "react-native-image-header-scroll-view": "^1.0.0",
+        "react-native-image-zoom-viewer": "^3.0.1",
         "react-native-linear-gradient": "^2.5.6",
+        "react-native-parallax-scroll-view": "^0.21.3",
         "react-native-picker": "^4.3.7",
         "react-native-reanimated": "^2.2.0",
         "react-native-safe-area-context": "^3.2.0",
@@ -63,4 +65,5 @@
     "jest": {
         "preset": "react-native"
     }
+
 }
